--- a/src/programs/CMakeLists.txt
+++ b/src/programs/CMakeLists.txt
@@ -46,6 +46,13 @@ if( HAVE_WAM_LOKI_GPU )
         LIBS            ${PROJECT_NAME}_scc ${OpenMP_Fortran_LIBRARIES}
     )
     ecwam_target_compile_definitions_FILENAME(${PROJECT_NAME}-chief-loki-scc)
+
+    ecbuild_add_executable(
+        TARGET          ${PROJECT_NAME}-chief-loki-scc-stack
+        SOURCES         chief.F90
+        LIBS            ${PROJECT_NAME}_scc_stack ${OpenMP_Fortran_LIBRARIES}
+    )
+    ecwam_target_compile_definitions_FILENAME(${PROJECT_NAME}-chief-loki-scc-stack)
 endif()
 
 string( TOUPPER ${PROJECT_NAME} PNAME )
