--- a/src/ecwam/CMakeLists.txt
+++ b/src/ecwam/CMakeLists.txt
@@ -687,7 +687,7 @@ if( HAVE_CUDA )
   list(REMOVE_ITEM phys_srcs femean.F90 meansqs_lf.F90 omegagc.F90 semean.F90 sinput_jan.F90 wsigstar.F90)
   foreach(src ${phys_srcs} wamintgr_cuda_mod.F90 ${global_var_mods})
      string(REPLACE ".F90" "" fnc ${src})
-     string(CONCAT fnm "scc-cuf/" ${fnc} ".cuf_parametrise.F90")
+     string(CONCAT fnm "../ecwam-scc-cuf/" ${fnc} ".cuf_parametrise.F90")
      list(APPEND wam_scc_cuf_srcs ${fnm})
   endforeach()
   list(APPEND phys_srcs femean.F90 meansqs_lf.F90 omegagc.F90 semean.F90 sinput_jan.F90 wsigstar.F90)
