Added FIELD_API destructor calls to wamintgr_loki_gpu.F90

--- a/src/ecwam/ecwam_loki.config
+++ b/src/ecwam/ecwam_loki.config
@@ -11,7 +11,7 @@ enable_imports = false
 name = "wamintgr"
 role = "driver"
 expand = true
-disable = ["PROPAG_WAM", "NEWWIND", "GSTATS", "FREQUENCY_FIELD%INIT", "ENVIRONMENT_FIELD%INIT", "FORCING_FIELDS_FIELD%INIT", "WAVE2OCEAN_FIELD%INIT", "INTGT_PARAM_FIELDS_FIELD%INIT", "FREQUENCY_FIELD%UPDATE_VIEW", "ENVIRONMENT_FIELD%UPDATE_VIEW", "FORCING_FIELDS_FIELD%UPDATE_VIEW", "WAVE2OCEAN_FIELD%UPDATE_VIEW", "INTGT_PARAM_FIELDS_FIELD%UPDATE_VIEW", "SOURCE_CONTRIBS_FIELD%INIT", "SOURCE_CONTRIBS_FIELD%UPDATE_VIEW", "INCDATE", "DR_HOOK", "omp_get_wtime", "abort1", "wam_user_clock"]
+disable = ["PROPAG_WAM", "NEWWIND", "GSTATS", "FREQUENCY_FIELD%INIT", "ENVIRONMENT_FIELD%INIT", "FORCING_FIELDS_FIELD%INIT", "WAVE2OCEAN_FIELD%INIT", "INTGT_PARAM_FIELDS_FIELD%INIT", "FREQUENCY_FIELD%UPDATE_VIEW", "ENVIRONMENT_FIELD%UPDATE_VIEW", "FORCING_FIELDS_FIELD%UPDATE_VIEW", "WAVE2OCEAN_FIELD%UPDATE_VIEW", "INTGT_PARAM_FIELDS_FIELD%UPDATE_VIEW", "SOURCE_CONTRIBS_FIELD%INIT", "SOURCE_CONTRIBS_FIELD%UPDATE_VIEW", "INCDATE", "DR_HOOK", "omp_get_wtime", "abort1", "wam_user_clock", "FREQUENCY_FIELD%FINAL", "ENVIRONMENT_FIELD%FINAL", "FORCING_FIELDS_FIELD%FINAL", "WAVE2OCEAN_FIELD%FINAL", "INTGT_PARAM_FIELDS_FIELD%FINAL", "SOURCE_CONTRIBS_FIELD%INIT", "SOURCE_CONTRIBS_FIELD%FINAL"]
 real_kind = 'JWRB'
 
 [[dimension]]
