Add single precision option to bundle

--- a/package/bundle/bundle.yml
+++ b/package/bundle/bundle.yml
@@ -30,6 +30,10 @@ projects :
 
 options :
 
+    - single-precision :
+        help  : Enable single precision build of the dwarf
+        cmake : ENABLE_SINGLE_PRECISION=ON
+
     - without-mpi :
         help  : Disable MPI
         cmake : ENABLE_MPI=OFF
