--- a/src/ecwam/yowfield_mod_config.yaml
+++ b/src/ecwam/yowfield_mod_config.yaml
@@ -57,17 +57,17 @@ objdef:
    - [xlon, real, 2]
    - [ylat, real, 2]
   wave2ocean:
-   - [nswh, real, 2]
-   - [nmwp, real, 2]
-   - [nphieps, real, 2]
-   - [nemophif, real, 2]
-   - [ntauoc, real, 2]
-   - [nemotaux, real, 2]
-   - [nemotauy, real, 2]
-   - [nemoustokes, real, 2]
-   - [nemovstokes, real, 2]
-   - [nemostrn, real, 2]
-   - [nemowswave, real, 2]
+   - [nswh, ocean, 2]
+   - [nmwp, ocean, 2]
+   - [nphieps, ocean, 2]
+   - [nemophif, ocean, 2]
+   - [ntauoc, ocean, 2]
+   - [nemotaux, ocean, 2]
+   - [nemotauy, ocean, 2]
+   - [nemoustokes, ocean, 2]
+   - [nemovstokes, ocean, 2]
+   - [nemostrn, ocean, 2]
+   - [nemowswave, ocean, 2]
   intgt_param_fields:
    - [wsemean, real, 2]
    - [wsfmean, real, 2]
