Small fixes after PR review

--- a/package/bundle/bundle.yml
+++ b/package/bundle/bundle.yml
@@ -30,7 +30,7 @@ projects :
 
 options :
 
-    - single-precision :
+    - with-single-precision :
         help  : Enable single precision build of the dwarf
         cmake : ENABLE_SINGLE_PRECISION=ON
 
