--- a/src/ecwam/CMakeLists.txt
+++ b/src/ecwam/CMakeLists.txt
@@ -684,7 +684,7 @@ if( HAVE_WAM_LOKI )
      if( CMAKE_Fortran_COMPILER_ID MATCHES PGI|NVHPC )
         target_compile_options( ${ecwam}_scc_stack PUBLIC "-Mcray=pointer" )
         if( HAVE_ACC )
-           target_compile_options( ${ecwam}_scc_stack PUBLIC "-gpu=gvmode,maxregcount:168" )
+           target_compile_options( ${ecwam}_scc_stack PUBLIC "-gpu=gvmode,maxregcount:168,fastmath" )
         endif()
      elseif( CMAKE_Fortran_COMPILER_ID MATCHES GNU )
         target_compile_options( ${ecwam}_scc_stack PUBLIC "-fcray-pointer" )
